--- a/TutorialBot.csproj
+++ b/TutorialBot.csproj
@@ -9,10 +9,14 @@
 
   <ItemGroup>
     <None Remove="config.json" />
+    <None Remove="Sounds\Smack-No!.wav" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\Smack-No!.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
